--- a/MyService/Base.lproj/Main.storyboard
+++ b/MyService/Base.lproj/Main.storyboard
@@ -17,44 +17,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="message" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LTa-7O-pxL">
-                                <rect key="frame" x="0.0" y="288" width="414" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="LTa-7O-pxL" secondAttribute="height" multiplier="23:2" id="TVM-jH-Rae"/>
-                                    <constraint firstAttribute="height" constant="36" id="VLu-aC-UFJ"/>
-                                    <constraint firstAttribute="width" constant="414" id="WeY-9o-ea5"/>
-                                </constraints>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="message" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LTa-7O-pxL">
+                                <rect key="frame" x="0.0" y="126" width="414" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ip address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ObW-GR-bza">
-                                <rect key="frame" x="0.0" y="213" width="414" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="414" id="42r-ZG-6iI"/>
-                                    <constraint firstAttribute="height" constant="36" id="59A-H3-Pjd"/>
-                                    <constraint firstAttribute="width" secondItem="ObW-GR-bza" secondAttribute="height" multiplier="23:2" id="MPm-i3-eUv"/>
-                                </constraints>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ip address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ObW-GR-bza">
+                                <rect key="frame" x="0.0" y="75" width="414" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7D-rX-zRj">
-                                <rect key="frame" x="0.0" y="446" width="414" height="309"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="309" id="6vl-m4-vyu"/>
-                                    <constraint firstAttribute="width" secondItem="u7D-rX-zRj" secondAttribute="height" multiplier="138:103" id="H2s-Aq-Lxt"/>
-                                    <constraint firstAttribute="width" constant="414" id="Hrd-ut-zZU"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="result:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7D-rX-zRj">
+                                <rect key="frame" x="20" y="553" width="374" height="309"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68g-4a-3rb">
-                                <rect key="frame" x="180.5" y="332" width="53" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="68g-4a-3rb" secondAttribute="height" multiplier="53:31" id="HPs-P7-p7W"/>
-                                    <constraint firstAttribute="width" constant="53" id="Imi-zq-xTp"/>
-                                    <constraint firstAttribute="height" constant="31" id="uQO-pc-vqf"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZsM-mS-MeU">
+                                <rect key="frame" x="15" y="202" width="384" height="201"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hSJ-4d-lQA">
+                                <rect key="frame" x="0.0" y="170" width="88" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="選擇圖片"/>
+                                <connections>
+                                    <action selector="getImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="t48-Nf-O4L"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="progress:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DBx-Yk-kFl">
+                                <rect key="frame" x="61" y="418" width="353" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68g-4a-3rb">
+                                <rect key="frame" x="0.0" y="413" width="53" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="傳送"/>
                                 <connections>
@@ -64,22 +68,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="ObW-GR-bza" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="169" id="6a2-v7-hFJ"/>
-                            <constraint firstItem="LTa-7O-pxL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Bpb-6A-aqm"/>
-                            <constraint firstItem="LTa-7O-pxL" firstAttribute="top" secondItem="ObW-GR-bza" secondAttribute="bottom" constant="39" id="IZk-LO-BZu"/>
-                            <constraint firstItem="68g-4a-3rb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Qvk-g6-mfj"/>
-                            <constraint firstItem="ObW-GR-bza" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Vaq-V5-K2Q"/>
-                            <constraint firstItem="ObW-GR-bza" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="W6P-nC-FSt"/>
-                            <constraint firstItem="u7D-rX-zRj" firstAttribute="top" secondItem="68g-4a-3rb" secondAttribute="bottom" constant="83" id="jfN-8O-GgZ"/>
-                            <constraint firstItem="LTa-7O-pxL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="l4N-ac-Pou"/>
-                            <constraint firstItem="68g-4a-3rb" firstAttribute="top" secondItem="LTa-7O-pxL" secondAttribute="bottom" constant="8" symbolic="YES" id="th6-4x-UHe"/>
-                            <constraint firstItem="u7D-rX-zRj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="x2c-P3-mGK"/>
-                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="imageView" destination="ZsM-mS-MeU" id="FKf-rj-qpW"/>
                         <outlet property="ipTextField" destination="ObW-GR-bza" id="gWU-u4-i2Z"/>
                         <outlet property="msgField" destination="LTa-7O-pxL" id="nRz-FN-LwW"/>
+                        <outlet property="progressLabel" destination="DBx-Yk-kFl" id="XWX-iI-Qu1"/>
                         <outlet property="result" destination="u7D-rX-zRj" id="BKZ-zz-dMw"/>
                     </connections>
                 </viewController>
